Fixes spacing around gamecard back selector on narrow viewports

--- a/src/index.css
+++ b/src/index.css
@@ -703,7 +703,7 @@ button:enabled,
     max-height: 450px;
     min-height: 450px;
     min-width: 100%;
-    grid-template-rows: 1.5rem 1.5rem auto 2rem;
+    grid-template-rows: 1.5rem 3rem auto 2rem;
     grid-template-columns: 200px 1fr 1fr auto 75px;
     grid-template-areas:
       "gc-visual gc-title gc-title gc-title gc-header"
